<resources>
    <string name="app_name">Reband</string>
    <string name="kakao_key">b27a74b026594e2bc6ddc61b64837bd8</string>

    <string name="naver_client_id">DjmgDqevuObSq_s4gUAN</string>
    <string name="naver_client_secret">clkzRcKMzv</string>
    <string name="naver_client_name">Reband</string>

    <string name="drum">드럼</string>
    <string name="bass">베이스</string>
    <string name="vocal">보컬</string>
    <string name="guitar">기타</string>
    <string name="keyboard">키보드</string>
    <string name="cancel">취소</string>
    <string name="register">등록</string>

    <!-- 홈 프래그먼트 -->
    <string name="search_new_member_title_text">새로운 멤버를 찾고 있나요?</string>
    <string name="search_new_member_description_text">Reband를 통해 %s개의 밴드가 멤버를 구했어요!\n지금 바로 멤버 모집글을 게시해보세요.</string>
    <string name="search_new_member_add_btn_text">신규 모집 공고 작성하기</string>
    <string name="recruiting_new_member_title_text">지금 멤버를 모집중인 밴드에요</string>
    <string name="show_more_recruiting_band_btn_text">더 많은 모집 공고 보러가기</string>
    <string name="create_new_band_title_text">새로운 밴드를 만들 수 있어요</string>
    <string name="create_new_band_sub_title_text">마음에 드는 밴드를 찾지 못하셨나요?\n나에게 딱 맞는 밴드를 만들어보세요.</string>
    <string name="create_new_band_btn_text">신규 밴드 생성하기</string>

    <!-- 마이 페이지 프래그먼트 -->
    <string name="state_logout_text">로그인 후 이용해주세요</string>
    <string name="login_text">로그인</string>
    <string name="profile_register_text">프로필 등록</string>
    <string name="profile_update_text">프로필 수정</string>
    <string name="band_management">밴드 관리</string>
    <string name="application_status">지원 현황</string>
    <string name="notification">알림</string>
    <string name="notice">공지사항</string>
    <string name="terms_of_use">이용약관</string>

    <string-array name="LocationList">
        <item>서울특별시</item>
        <item>경기도</item>
        <item>인천광역시</item>
        <item>세종특별자치시</item>
        <item>강원도</item>
        <item>충청북도</item>
        <item>충청남도</item>
        <item>대전광역시</item>
        <item>경상북도</item>
        <item>대구광역시</item>
        <item>경상남도</item>
        <item>울산광역시</item>
        <item>부산광역시</item>
        <item>전라북도</item>
        <item>전라남도</item>
        <item>광주광역시</item>
        <item>제주특별자치도</item>
    </string-array>

    <string-array name="Jeollabukdo">
        <item>전체</item>
        <item>고창군</item>
        <item>군산시</item>
        <item>김제시</item>
        <item>남원시</item>
        <item>무주군</item>
        <item>부안군</item>
        <item>순창군</item>
        <item>완주군</item>
        <item>익산시</item>
        <item>임실군</item>
        <item>장수군</item>
        <item>전주시</item>
        <item>정읍시</item>
        <item>진안군</item>
    </string-array>

    <string-array name="Jeju">
        <item>전체</item>
        <item>서귀포시</item>
        <item>제주시</item>
    </string-array>

    <string-array name="Daejeon">
        <item>전체</item>
        <item>대덕구</item>
        <item>동구</item>
        <item>서구</item>
        <item>유성구</item>
        <item>중구</item>
    </string-array>

    <string-array name="Busan">
        <item>전체</item>
        <item>강서구</item>
        <item>금정구</item>
        <item>기장군</item>
        <item>남구</item>
        <item>동구</item>
        <item>동래구</item>
        <item>부산진구</item>
        <item>북구</item>
        <item>사상구</item>
        <item>사하구</item>
        <item>서구</item>
        <item>수영구</item>
        <item>연제구</item>
        <item>영도구</item>
        <item>중구</item>
        <item>해운대구</item>
    </string-array>

    <string-array name="Gangwondo">
        <item>전체</item>
        <item>강릉시</item>
        <item>고성군</item>
        <item>동해시</item>
        <item>삼척시</item>
        <item>속초시</item>
        <item>양구군</item>
        <item>양양군</item>
        <item>영월군</item>
        <item>원주시</item>
        <item>연제군</item>
        <item>정성군</item>
        <item>철원군</item>
        <item>춘천시</item>
        <item>태백시</item>
        <item>평창군</item>
        <item>흥천군</item>
        <item>화천군</item>
        <item>횡성군</item>
    </string-array>

    <string-array name="Jeollanamdo">
        <item>전체</item>
        <item>강진군</item>
        <item>고흥군</item>
        <item>곡성군</item>
        <item>광양시</item>
        <item>구례군</item>
        <item>나주시</item>
        <item>담양군</item>
        <item>목포시</item>
        <item>무안군</item>
        <item>보성군</item>
        <item>순천시</item>
        <item>신안군</item>
        <item>여수시</item>
        <item>영광군</item>
        <item>영암군</item>
        <item>완도군</item>
        <item>장성군</item>
        <item>장흥군</item>
        <item>진도군</item>
        <item>함평군</item>
        <item>해남군</item>
        <item>화순군</item>
    </string-array>

    <string-array name="Incheon">
        <item>전체</item>
        <item>강화군</item>
        <item>계양구</item>
        <item>남동구</item>
        <item>동구</item>
        <item>미추홀구</item>
        <item>부평구</item>
        <item>서구</item>
        <item>연수구</item>
        <item>옹진군</item>
        <item>중구</item>
    </string-array>

    <string-array name="Gwangju">
        <item>전체</item>
        <item>광산구</item>
        <item>남구</item>
        <item>동구</item>
        <item>북구</item>
        <item>서구</item>
    </string-array>

    <string-array name="Ulsan">
        <item>전체</item>
        <item>남구</item>
        <item>동구</item>
        <item>북구</item>
        <item>울주군</item>
        <item>중구</item>
    </string-array>

    <string-array name="Daegu">
        <item>전체</item>
        <item>남구</item>
        <item>달서구</item>
        <item>달성군</item>
        <item>동구</item>
        <item>북구</item>
        <item>서구</item>
        <item>수성구</item>
        <item>중구</item>
    </string-array>

    <string-array name="Gyeongsangbukdo">
        <item>전체</item>
        <item>경산시</item>
        <item>경주시</item>
        <item>고령군</item>
        <item>구미시</item>
        <item>군위군</item>
        <item>김천시</item>
        <item>문경시</item>
        <item>봉화군</item>
        <item>상주시</item>
        <item>성주군</item>
        <item>안동시</item>
        <item>영덕군</item>
        <item>영양군</item>
        <item>영주시</item>
        <item>영천시</item>
        <item>예천군</item>
        <item>울릉군</item>
        <item>울진군</item>
        <item>의성군</item>
        <item>청도군</item>
        <item>청송군</item>
        <item>칠곡군</item>
        <item>포항시</item>
    </string-array>

    <string-array name="Chungcheongbukdo">
        <item>전체</item>
        <item>괴산군</item>
        <item>단양군</item>
        <item>보은군</item>
        <item>영동군</item>
        <item>옥천군</item>
        <item>음성군</item>
        <item>제천시</item>
        <item>증평군</item>
        <item>진천군</item>
        <item>청주시</item>
        <item>충주시</item>
    </string-array>

    <string-array name="Gyeongsangnamdo">
        <item>전체</item>
        <item>거제시</item>
        <item>거창군</item>
        <item>고성군</item>
        <item>김해시</item>
        <item>남해군</item>
        <item>밀양시</item>
        <item>사천시</item>
        <item>산청군</item>
        <item>양산시</item>
        <item>의령군</item>
        <item>진주시</item>
        <item>창녕군</item>
        <item>창원시</item>
        <item>통영시</item>
        <item>하동군</item>
        <item>함안군</item>
        <item>함양군</item>
        <item>합천군</item>
    </string-array>

    <string-array name="Chungcheongnamdo">
        <item>전체</item>
        <item>계릉시</item>
        <item>공주시</item>
        <item>금산군</item>
        <item>논산시</item>
        <item>당진시</item>
        <item>보령시</item>
        <item>부여군</item>
        <item>서산시</item>
        <item>서천군</item>
        <item>아산시</item>
        <item>애산군</item>
        <item>천안시</item>
        <item>청양군</item>
        <item>태안군</item>
        <item>홍성군</item>
    </string-array>

    <string-array name="Gyeonggido">
        <item>전체</item>
        <item>가평군</item>
        <item>고양시</item>
        <item>과천시</item>
        <item>광명시</item>
        <item>광주시</item>
        <item>구리시</item>
        <item>군포시</item>
        <item>김포시</item>
        <item>남양주시</item>
        <item>동두천시</item>
        <item>부천시</item>
        <item>성남시</item>
        <item>수원시</item>
        <item>시흥시</item>
        <item>안산시</item>
        <item>안성시</item>
        <item>안양시</item>
        <item>양주시</item>
        <item>양평군</item>
        <item>여주시</item>
        <item>연천군</item>
        <item>오산시</item>
        <item>용인시</item>
        <item>의왕시</item>
        <item>의정부시</item>
        <item>이천시</item>
        <item>파주시</item>
        <item>평택시</item>
        <item>포천시</item>
        <item>하남시</item>
        <item>화성시</item>
    </string-array>

    <string-array name="Sejong">
        <item>전체</item>
    </string-array>

    <string-array name="Seoul">
        <item>전체</item>
        <item>강남구</item>
        <item>강동구</item>
        <item>강북구</item>
        <item>강서구</item>
        <item>광진구</item>
        <item>구로구</item>
        <item>금천구</item>
        <item>노원구</item>
        <item>도봉구</item>
        <item>동대문구</item>
        <item>동작구</item>
        <item>마포구</item>
        <item>서대문구</item>
        <item>서초구</item>
        <item>성동구</item>
        <item>성북구</item>
        <item>송파구</item>
        <item>양천구</item>
        <item>영등포구</item>
        <item>용산구</item>
        <item>은평구</item>
        <item>종로구</item>
        <item>중구</item>
        <item>중랑구</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="search_band_name">밴드명을 입력해주세요</string>

</resources>