<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.project.reband.viewmodel.HomeFragmentViewModel" />

    </data>

    <ScrollView
        android:id="@+id/sv_home_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_search_new_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_search_new_member_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingStart="10dp"
                    android:text="@string/search_new_member_title_text"
                    android:textColor="@color/blackText"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_search_new_member_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingStart="10dp"
                    android:text="@{@string/search_new_member_description_text(vm.recruitmentList != null ? vm.recruitmentList.size : 0)}"
                    android:textColor="@color/blackText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_search_new_member_title" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_search_new_member_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/main_btn_bg"
                    android:clickable="true"
                    android:onClick="@{() -> vm.clickSearchNewMemberAddBtn()}"
                    android:text="@string/search_new_member_add_btn_text"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_search_new_member_description" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/grayLine" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_recruiting_new_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_recruiting_new_member_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/recruiting_new_member_title_text"
                    android:textColor="@color/blackText"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/rv_recruiting_new_member"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_recruiting_new_member"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_recruiting_new_member_title"
                    tools:listitem="@layout/vh_recruiting_band" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_show_more_recruiting_band"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/main_btn_bg"
                    android:clickable="true"
                    android:onClick="@{() -> vm.clickShowMoreRecruitingBandBtn()}"
                    android:text="@string/show_more_recruiting_band_btn_text"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_recruiting_new_member" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/grayLine" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_create_new_band"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_create_new_band"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/create_new_band_title_text"
                    android:textColor="@color/blackText"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_create_new_band_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/blackText"
                    android:text="@string/create_new_band_sub_title_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_create_new_band" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_create_new_band"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/main_btn_bg"
                    android:clickable="true"
                    android:onClick="@{() -> vm.clickCreateNewBandBtn()}"
                    android:text="@string/create_new_band_btn_text"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_create_new_band_content" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</layout>


