<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/arrow_back"
                android:text="돌아가기"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_band_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_back">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_band_thumbnail"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="24dp"
                    android:src="@drawable/default_image_ic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_band_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="밴드명"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/iv_band_thumbnail"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/ll_band_region"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_band_name"
                    app:layout_constraintTop_toBottomOf="@id/tv_band_name">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:text="서울" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:text="관악구" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_band_feature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_band_title">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_band_feature_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="밴드 특징"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/ll_band_feature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_band_feature_title">


                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_band_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_band_feature">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_band_member_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="밴드 멤버 > "
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_band_member_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_band_member_title"
                    app:layout_constraintStart_toEndOf="@id/tv_band_member_title"
                    app:layout_constraintTop_toTopOf="@id/tv_band_member_title" />

                <LinearLayout
                    android:id="@+id/ll_band_member"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_band_member_title">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_drum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:text="@string/drum" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_guitar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:text="@string/guitar" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_bass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:text="@string/bass" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_vocal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:text="@string/vocal" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_keyboard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:text="@string/keyboard" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/div_member_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_band_member" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_band_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintBottom_toTopOf="@id/tv_band_introduce_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/div_member_line"
                tools:listitem="@layout/vh_band_member" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_band_introduce_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="밴드 소개"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_band_member" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_band_introduce"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/outline_textview_bg"
                android:text="안녕하세요 저희 밴드는 서울 관악구에서 활동하는 직장인 밴드입니다. 다들 취미로 하고 있으면 열정만 가지고 계시면 됩니다. 많은 관심 부탁드립니다. \n
20 ~ 30대로 구성되어 있으며 직장의 스트레스를 풀며 멋진 무대를 만들어가고 싶습니다."
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_band_introduce_title" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_band_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_band_introduce">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_band_video_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="연주 영상"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_band_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/outline_textview_bg"
                    android:drawableEnd="@drawable/ic_youtube"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="6dp"
                    android:text="YOUTUBE" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_edit_band_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawableEnd="@drawable/arrow_forward"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="밴드 정보 수정"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_band_video" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>
